fix `ListItem` spacing with descriptions (#389)
This addresses a few considerations that were remaining from 735bc87.

--- a/packages/kiwi-react/src/bricks/Tree.css
+++ b/packages/kiwi-react/src/bricks/Tree.css
@@ -80,7 +80,6 @@
 
 .🥝-tree-item-actions:is(.🥝-list-item-decoration) {
 	@layer base {
-		grid-row: block;
 		align-self: stretch;
 		position: sticky;
 		inset-inline-end: 0;
